Append Mock Practice 03 to HW11